--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,90 @@
 body {
-  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-  margin: 0px;
-  width: 100%;
+    font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
+    margin: 0px;
+    width: 100%;
 }
 
 h1 {
-  text-align: center;
-  font-style: italic;
-  color: #373fff;
+    text-align: center;
+    font-style: italic;
+    color: #373fff;
 }
 
 img {
-  width: 100%;
+    width: 100%;
 }
 
 .block {
   background-color: #fff;
-  float: left;
-  border-color: #000;
-  border: 0px;
-  display: flex;
+    float: left;
+    border-color: #000;
+    border: 0px;
+    display: flex;
 }
 
 .vw50 {
-  width: 50vw;
-  height: 28.1vw;
+    width: 50vw;
+    height: 28.1vw;
+	line-height:28.1vw;
 }
 
 .vw100 {
-  width: 100vw;
-  height: 56.2vw;
+    width: 100vw;
+    height: 56.2vw;
+    line-height: 56.2vw;
+}
+
+.cover {
+    object-fit: cover;
+    object-position: center;
+}
+
+.gifLayer {
+    opacity: 0;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    z-index: 100;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.gifLayer:hover {
+    opacity: 1;
+}
+
+.hoverLayer {
+    background-color: #000;
+    position: absolute;
+    /* width: 100%;
+  height: 100%; */
+    opacity: 0.2;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.hoverLayer:hover {
+    opacity: 0;
+}
+
+.title {
+    text-align: center;
+    color: white;
+    position: absolute;
+    opacity: 1;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.title:hover {
+    opacity: 0;
 }
