--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,25 @@ img {
     display: flex;
 }
 
+.header {
+		width: 100%;
+		height: 150px;
+}
+.header-content{
+  background-color: #fff;
+    border-color: #000;
+}
+.banner100 {
+    width: 100vw;
+    height: 30vw;
+    line-height: 30vw;
+}
+.banner50 {
+    width: 100vw;
+    height: 20vw;
+    line-height: 20vw;
+}
+
 .vw50 {
     width: 50vw;
     height: 28.1vw;
