--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    cursor: pointer;
     font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
     margin: 0px;
     width: 100%;
