--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,51 @@
 body {
-    cursor: pointer;
+    /* cursor: pointer;
     font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
     margin: 0px;
-    width: 100%;
+    width: 100%; */
+    background-color: #151c22 !important;
 }
 
-h1 {
-    text-align: center;
-    font-style: italic;
-    color: #373fff;
-}
+/* h2 {
+    position: absolute;
+    top: 50%;
+    right: 0;
+  } */
 
 img {
-    width: 100%;
+    opacity: 1;
+    object-fit: cover;
+    object-position: center;
 }
 
-.block {
-    background-color: #fff;
-    float: left;
-    border-color: #000;
-    border: 0px;
-    display: flex;
+.coverContainer {
+    width: 100%;
+    padding-top: 75%;
+    /* background-color: red */
+}
+
+.centerCrop {
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+/* .coverContainer:hover{
+    object-fit: scale-down;
+    width: 120;
+    height: 120;;
+} */
+
+.header img{
+    mix-blend-mode: lighten;
 }
 
 .header {
+    opacity: 1;
     width: 100%;
     height: 150px;
-}
-
-.header-content {
-    background-color: #fff;
-    border-color: #000;
+    display: block;
+    background-color: #151c22 !important;
 }
 
 .banner100 {
@@ -45,25 +60,9 @@ img {
     line-height: 20vw;
 }
 
-.vw50 {
-    width: 50vw;
-    height: 28.1vw;
-    line-height: 28.1vw;
-}
-
-.vw100 {
-    width: 100vw;
-    height: 56.2vw;
-    line-height: 56.2vw;
-}
-
-.cover {
-    object-fit: cover;
-    object-position: center;
-}
 
 .gifLayer {
-    cursor: pointer;
+    /* cursor: pointer; */
     opacity: 0;
     object-fit: cover;
     object-position: center;
@@ -80,22 +79,21 @@ img {
     opacity: 1;
 }
 
-.hoverLayer {
-    background-color: #000;
+.darkOverlay {
+    background-color: #151c22 !important;
     position: absolute;
-    /* width: 100%;
-  height: 100%; */
-    opacity: 0.2;
-    -webkit-transition: opacity 1s;
+    top: 0px;
+    opacity: 0.6;
+    /* -webkit-transition: opacity 1s;
     -moz-transition: opacity 1s;
     -ms-transition: opacity 1s;
     -o-transition: opacity 1s;
-    transition: opacity 1s;
+    transition: opacity 1s; */
 }
 
-.hoverLayer:hover {
+/* .hoverLayer:hover {
     opacity: 0;
-}
+} */
 
 .tags {
     text-shadow: 2px 2px 8px #000000FF;
@@ -121,7 +119,14 @@ img {
 .title {
     text-align: center;
     color: white;
+    opacity: 1;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.disapperWhenHover {
     opacity: 1;
     -webkit-transition: opacity 1s;
     -moz-transition: opacity 1s;
@@ -130,12 +135,12 @@ img {
     transition: opacity 1s;
 }
 
-.title:hover {
+.disapperWhenHover:hover {
     opacity: 0;
 }
 
-.toMyBlog{
-  position: fixed;
+.toMyBlog {
+    position: fixed;
     top: 24px;
     left: 24px;
     width: 80px;
