--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,18 @@ img {
 .coverContainer {
     width: 100%;
     padding-top: 75%;
+    -webkit-transition: all .6s ease-in-out;
+	-moz-transition: all .6s ease-in-out;
+	-o-transition: all .6s ease-in-out;
+	-ms-transition: all .6s ease-in-out;
+}
+.coverContainer video{
+    width: 99%;
+    height: 99%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0.5%);
 }
 
 .centerCrop {
@@ -29,11 +41,6 @@ img {
     object-position: center;
 }
 
-/* .coverContainer:hover{
-    object-fit: scale-down;
-    width: 120;
-    height: 120;;
-} */
 
 .header img{
     mix-blend-mode: lighten;
@@ -60,29 +67,13 @@ img {
 }
 
 
-.gifLayer {
-    /* cursor: pointer; */
-    opacity: 0;
-    object-fit: cover;
-    object-position: center;
-    position: absolute;
-    z-index: 100;
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -ms-transition: opacity 1s;
-    -o-transition: opacity 1s;
-    transition: opacity 1s;
-}
-
-.gifLayer:hover {
-    opacity: 1;
-}
-
 .darkOverlay {
     background-color: #151c22 !important;
     position: absolute;
     top: 0px;
     opacity: 0.6;
+    width: 100%;
+    height: 100%;
     /* -webkit-transition: opacity 1s;
     -moz-transition: opacity 1s;
     -ms-transition: opacity 1s;
@@ -93,27 +84,6 @@ img {
 /* .hoverLayer:hover {
     opacity: 0;
 } */
-
-.tags {
-    text-shadow: 2px 2px 8px #000000FF;
-    text-align: left;
-    color: white;
-    position: absolute;
-    opacity: 0.7;
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -ms-transition: opacity 1s;
-    -o-transition: opacity 1s;
-    transition: opacity 1s;
-    line-height: 1em;
-    font-size: 0.85em;
-    padding: 12px;
-    font-weight: 100;
-}
-
-.tags:hover {
-    opacity: 0;
-}
 
 .title {
     text-align: center;
@@ -138,12 +108,15 @@ img {
     opacity: 0;
 }
 
-.toMyBlog {
-    position: fixed;
-    top: 24px;
-    left: 24px;
-    width: 80px;
-    z-index: 99999;
-    border-radius: 8px;
-    box-shadow: 1px 16px 20px #0000001a;
+.enlarge {
+    -webkit-transform: scale(1.04); 
+    -moz-transform: scale(1.04);
+    -o-transform: scale(1.04);
+    transform: scale(1.04);
+}
+#content {
+	-webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	-o-transition: all .4s ease-in-out;
+	-ms-transition: all .4s ease-in-out;
 }
