--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,14 @@ body {
     background-color: #151c22 !important;
 }
 
-/* h2 {
-    position: absolute;
-    top: 50%;
-    right: 0;
-  } */
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    background-color: #ffffff12 !important;
+}
+
+#header {
+    min-height: 120px;
+}
 
 img {
     opacity: 1;
@@ -74,16 +77,7 @@ img {
     opacity: 0.6;
     width: 100%;
     height: 100%;
-    /* -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -ms-transition: opacity 1s;
-    -o-transition: opacity 1s;
-    transition: opacity 1s; */
 }
-
-/* .hoverLayer:hover {
-    opacity: 0;
-} */
 
 .title {
     text-align: center;
@@ -96,6 +90,7 @@ img {
 }
 
 .disapperWhenHover {
+    cursor: pointer;
     opacity: 1;
     -webkit-transition: opacity 1s;
     -moz-transition: opacity 1s;
