--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,9 +1,9 @@
-#about {
+.about {
   background-color: white;
   min-height: 100vh;
   color: black;
   text-align: center;
-  padding: 10%;
+  // padding: 10% 0;
 
   h3 {
     font-weight: 200;
