--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -9,3 +9,29 @@
     opacity: 0;
   }
 }
+
+@mixin break($length) {
+  @media (min-width: $length) {
+    @content;
+  }
+}
+
+@mixin clearFix() {
+  &:before,
+  &:after {
+    content: " ";
+    display: table;
+  }
+
+  &:after {
+    display: block;
+    clear: both;
+    height: 1px;
+    margin-top: -1px;
+    visibility: hidden;
+  }
+
+  & {
+    *zoom: 1;
+  }
+}
