--- a/src/scss/bigNav.scss
+++ b/src/scss/bigNav.scss
@@ -1,4 +1,5 @@
 #my-navbar {
+  mix-blend-mode: darken;
   z-index: 999999;
   position: sticky;
   top: 0;
@@ -6,7 +7,7 @@
   align-items: center;
   height: 120px;
   padding-top: 32px;
-  background-color: white;
+  background-color: #ffffffcc;
 
   .my-navbar-brand {
     display: flex;
