--- a/src/scss/bigNav.scss
+++ b/src/scss/bigNav.scss
@@ -1,14 +1,19 @@
 #my-navbar {
-  mix-blend-mode: darken;
   z-index: 999999;
+  mix-blend-mode: darken;
   position: fixed;
   width: 100%;
   display: flex;
   align-items: center;
   height: 120px;
   padding-top: 32px;
-  background-color: #ffffffcc;
+  background-color: #ffffff00;
   transition: top 0.3s;
+
+  // #logoCanvas {
+
+  //   background-color: white;
+  // }
 
   .my-navbar-brand {
     display: flex;
