--- a/src/scss/bigNav.scss
+++ b/src/scss/bigNav.scss
@@ -1,13 +1,12 @@
 #my-navbar {
   z-index: 999999;
-  mix-blend-mode: darken;
   position: fixed;
   width: 100%;
   display: flex;
   align-items: center;
   height: 120px;
   padding-top: 32px;
-  background-color: #ffffff00;
+  background-color: #ffffff;
   transition: top 0.3s;
 
   // #logoCanvas {
