--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -26,18 +26,37 @@ a:link {
 
 .hero {
   position: relative;
-  margin: 10vh 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 38.2vh;
+  margin: 10vh 32px;
   @include break($sm-min) {
     margin: 5vh 8%;
+    height: 61.8vh;
   }
 
   h1 {
+    width: 100%;
     font-weight: 700;
-    font-size: 10vh;
+    font-size: 5vh;
     @include break($sm-min) {
-      font-size: 20vh;
+      font-size: 5vw;
     }
   }
+  h2 {
+    width: 100%;
+    font-weight: 500;
+    font-size: 3vh;
+    @include break($sm-min) {
+      font-size: 3vw;
+    }
+  }
+}
+
+.projects-filter {
+  // padding-left: 10%;
 }
 
 .coverContainer {
@@ -45,8 +64,7 @@ a:link {
   position: absolute;
 
   &:hover {
-    z-index: 99999;
-    transform: scale(1.1);
+    transform: scale(1.05);
     -webkit-transition: transform 0.6s ease-in-out;
     -moz-transition: transform 0.6s ease-in-out;
     -o-transition: transform 0.6s ease-in-out;
@@ -58,7 +76,7 @@ a:link {
     opacity: 1;
     object-fit: cover;
     object-position: center;
-    position: absolute;
+    // position: absolute;
   }
 
   video {
@@ -67,16 +85,6 @@ a:link {
     top: 50%;
     left: 50%;
     transform: translate(-50%, 0.5%);
-  }
-
-  .title {
-    text-align: center;
-    color: white;
-    opacity: 1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 
   .cover {
@@ -104,6 +112,27 @@ a:link {
 
     &:hover {
       opacity: 0;
+    }
+  }
+}
+
+.project-info {
+  position: relative;
+  top: 75%;
+  h3 {
+    text-align: left;
+    color: black;
+    font-size: large;
+
+    @include break($sm-min) {
+      font-size: xx-large;
+    }
+  }
+  p {
+    color: gray;
+    font-size: small;
+    @include break($sm-min) {
+      font-size: large;
     }
   }
 }
