adding featured section

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,6 +56,10 @@ a:link {
   // padding-left: 10%;
 }
 
+.projects-cards {
+  margin: 0 3% 1em 3%;
+}
+
 .coverContainer {
   z-index: 1;
   position: absolute;
