--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,8 @@
 @import "./bigNav.scss";
 @import "./about.scss";
 @import "./mixins.scss";
+@import "./resume.scss";
+@import "./projects.scss";
 
 body {
   color: $text-color-main;
@@ -47,93 +49,7 @@ a:link {
     font-weight: 500;
     font-size: 3vh;
     @include break($sm-min) {
-      font-size: 3vw;
-    }
-  }
-}
-
-.projects-filter {
-  // padding-left: 10%;
-}
-
-.projects-cards {
-  margin: 0 3% 1em 3%;
-}
-
-.coverContainer {
-  z-index: 1;
-  position: absolute;
-
-  &:hover {
-    transform: scale(1.05);
-    -webkit-transition: transform 0.6s ease-in-out;
-    -moz-transition: transform 0.6s ease-in-out;
-    -o-transition: transform 0.6s ease-in-out;
-    -ms-transition: transform 0.6s ease-in-out;
-  }
-
-  img {
-    @extend .disapperWhenHover;
-    opacity: 1;
-    object-fit: cover;
-    object-position: center;
-    // position: absolute;
-  }
-
-  video {
-    height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 0.5%);
-  }
-
-  .cover {
-    background-position: center center;
-    background-size: cover;
-  }
-
-  .darkOverlay {
-    background-color: #151c22 !important;
-    position: absolute;
-    top: 0px;
-    opacity: 0.3;
-    width: 100%;
-    height: 100%;
-  }
-
-  .disapperWhenHover {
-    opacity: 1;
-    cursor: pointer;
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -ms-transition: opacity 1s;
-    -o-transition: opacity 1s;
-    transition: opacity 1s;
-
-    &:hover {
-      opacity: 0;
-    }
-  }
-}
-
-.project-info {
-  position: relative;
-  top: 75%;
-  h3 {
-    text-align: left;
-    color: black;
-    font-size: large;
-
-    @include break($sm-min) {
-      font-size: xx-large;
-    }
-  }
-  p {
-    color: gray;
-    font-size: small;
-    @include break($sm-min) {
-      font-size: large;
+      font-size: 2.5vw;
     }
   }
 }
