spacing and adding rainbow and starts

--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -1,9 +1,9 @@
 @import "./variables.scss";
 @import "./mixins.scss";
 
-.projects-filter {
-  // padding-left: 10%;
-}
+// .projects-filter {
+//   // padding-left: 10%;
+// }
 
 .projects-cards {
   margin: 0 3% 1em 3%;
@@ -68,7 +68,7 @@
 
 .project-info {
   position: relative;
-  top: 75%;
+  top: 77%;
   h3 {
     text-align: left;
     color: black;
